- Added SteamFriends.setPersonaName().
- Added remaining functions to activate Steam overlay.
- Added functions for rich presence and game invites to SteamFriends (#38).
- API change: the SteamFriendsCallback interface has been extended to reflect the latest additions.
- API change: removed SteamID.getNativeHandle(). All native handles can now be queried with SteamNativeHandle.getNativeHandle().

[1.6.0]
- Added SteamController interface.
- Fixed resource files (prebuilt native libraries) included in source jars.

[1.5.0]
- Updated to Steamworks SDK v1.38a.
- Added SteamUserCallback.onMicroTxnAuthorization() callback.
- API change: renamed SteamUserCallback.onValidateAuthTicketResponse() to SteamUserCallback.onValidateAuthTicket().
- API change: all uses of appID in member functions and callbacks now use 32-bit ints.

[1.4.0]
- Removed steamworks4j-natives subproject. Native libraries are now added as resources to steamworks4j.jar directly.
- Added functions to query global stats. This also adds a new method to SteamUserStatsCallback (#36).
- Updated shared library loader, adding a few fallbacks in case executables cannot be written to, or launched from, java.io.tmpdir.
- API change: SteamAPI.init() now throws SteamException if loading of native libraries fails. The function now returns false only if initialization fails for Steamworks reasons (e.g. no Steam client running).

[1.3.1]
- Updated to Steamworks SDK v1.37.
- Added some missing SteamUtils functions (#35).
- Added more fields returned in SteamUGCDetails (#34).

[1.3.0]
- Updated to Steamworks SDK v1.36.
- API change: changed auth ticket API to use SteamAuthTicket objects instead of plain integer handles.
- API change: getAuthSessionTicket() now takes an int[1] argument to return the the required buffer size.
- Added buffer validation checks to auth ticket functions.
- Added auth ticket test functions to SteamNetworkingTestApp.
- Added two missing SteamRemoteStorage.updatePublishedFile*() functions.