@@ -4,6 +4,7 @@
 - Added functions for rich presence and game invites to SteamFriends (#38).
 - API change: the SteamFriendsCallback interface has been extended to reflect the latest additions.
 - API change: removed SteamID.getNativeHandle(). All native handles can now be queried with SteamNativeHandle.getNativeHandle().
+- The default behaviour of SteamAPI.isSteamRunning() has changed to *not* call SteamAPI_IsSteamRunning(), see JavaDocs for more information.
 
 [1.6.0]
 - Added SteamController interface.
